@@ -1,3 +1,7 @@
+2014-11-24  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>
+
+	* gcc.target/aarch64/fuse_adrp_add_1.c: New test.
+
 2014-11-14  Bin Cheng  <bin.cheng@arm.com>
 
 	* gcc.target/arm/ldrd-strd-pair-1.c: New test.
